# saddle_point_petsc

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindPETSC.cmake
grids/: circular_cutout.geo  circular_cutout.msh  unitsquare.geo  unitsquare.msh
include/: Discretization.h  Mesh.h  Meshfunctions.h  SaddlePointProblem.h  Utils.h  Visualization.h
src/: CMakeLists.txt  Discretization.c  Mesh.c  Meshfunctions.c  SaddlePointProblem.c  Utils.c  Visulaization.c  main.c
